<resources>
    <string name="app_name">Alarm Panel</string>
    <string name="action_settings">Settings</string>
    <string name="action_publish">Publish</string>
    <string name="toast_code_match">Alarm code matches current code, enter a different code.</string>
    <string name="toast_code_alarm_set">Alarm has been set!</string>
    <string name="toast_code_unchanged">Alarm code unchanged!</string>
    <string name="toast_code_changed">Alarm code changed successfully!</string>
    <string name="toast_code_not_match">Code does not match, try again.</string>
    <string name="toast_code_invalid">Code is invalid, please try again.</string>
    <string name="toast_config_invalid">Error parsing remote configuration file, check your configuration.</string>
    <string name="text_enter_alarm_code_title">Enter a new alarm code</string>
    <string name="text_renter_alarm_code_title">Please enter the new code again to verify</string>
    <string name="preference_summary_security_code">Set the alarm admin code (default is 1234). Used for the default disarm code and to access settings.</string>
    <string name="preference_title_security_code">Security Code</string>
    <string name="preference_title_mqtt_server">MQTT</string>
    <string name="preference_summary_mqtt_server">MQTT alarm and service settings</string>
    <string name="preference_title_broker">MQTT Broker</string>
    <string name="preference_summary_broker">Set MQTT broker service address. For tcp/ssl exclude the prefix (192.168.1.1). For others, include the prefix (http://192.168.1.1).</string>
    <string name="preference_client_id">Client Id</string>
    <string name="preference_summary_client_id">Set the client Id if required by service.</string>
    <string name="preference_tls_connection">SSL/TLS Connection</string>
    <string name="preference_summary_tls_connection">Listen to broker on port 8883 with SSL/TLS.</string>
    <string name="preference_title_port">Service Port</string>
    <string name="preference_summary_port">Set the service port value, usually 8123 unless secure.</string>
    <string name="preference_title_command_topic">Alarm Command Topic</string>
    <string name="preference_title_state_topic">Alarm State Topic</string>
    <string name="preference_summary_command_topic">Set the command topic value to send commands to the MQTT service.</string>
    <string name="preference_summary_state_topic">Set the state topic value to receive messages from the MQTT service.</string>
    <string name="preference_title_username">Username</string>
    <string name="preference_summary_username">Set the service username (if needed).</string>
    <string name="preference_title_password">Password</string>
    <string name="preference_summary_password">Set the service password (if needed).</string>
    <string name="preference_title_alarm">Alarm</string>
    <string name="preference_summary_alarm">Alarm code settings</string>
    <string name="preference_title_weather_settings">Weather</string>
    <string name="preference_summary_weather_settings">Once activated, the weather settings will appear on the main screen.</string>
    <string name="preference_title_darksky">DarkSky</string>
    <string name="preference_summary_darksky">Activate the weather module using the DarkSky service.</string>
    <string name="preference_title_darksky_api">API Secret</string>
    <string name="preference_summary_darksky_api">Enter your DarkSky API secret.</string>
    <string name="preference_title_latitude">Latitude</string>
    <string name="preference_summary_latitude_summary">Edit the location latitude.</string>
    <string name="preference_title_longitude">Longitude</string>
    <string name="preference_summary_longitude_summary">Edit the location longitude.</string>
    <string name="preference_title_units">Use Celsius (°C)</string>
    <string name="preference_summary_units">Use celsius for temperature values.</string>
    <string name="preference_title_display">Display</string>
    <string name="preference_title_screen_saver_settings">Screensaver</string>
    <string name="preference_summary_screen_saver_settings">When active, uses a built-in clock screen saver.</string>
    <string name="preference_title_screen_saver">Clock Screen Saver</string>
    <string name="pref_title_image_client_id">Imgur Client Id</string>
    <string name="preference_summary_image_client_id">Enter the client id of the Imgur account from https://api.imgur.com.</string>
    <string name="preference_title_screen_saver_photo_settings">Photo Screensaver Settings</string>
    <string name="preference_summary_screen_saver_photo_settings">When active, uses rotating Imgur images for the screensaver.</string>
    <string name="preference_title_screen_saver_photo">Image Screensaver</string>
    <string name="preference_summary_screen_saver">Use rotating images from Instagram as screensaver.</string>
    <string name="preference_title_image_source">Imgur Tag</string>
    <string name="preference_summary_image_source">Enter an Imgur tag to use for images (example: space, architecture, flowers, or landscape).</string>
    <string name="preference_title_image_fit">Crop Images</string>
    <string name="preference_summary_image_fit">Crop the images to fit the screen size.</string>
    <string name="preference_title_image_rotation">Image Rotation Interval</string>
    <string name="preference_summary_image_rotation">Time in minutes between image refresh. Currently %1$s.</string>
    <string name="preference_title_web_settings">Dashboards</string>
    <string name="preference_summary_web_settings">You can load multiple dashboards that are displayed as you swipe right on the main screen. Each dashboard URL is rendered as a webpage.</string>
    <string name="preference_title_web">Home Automation Dashboards</string>
    <string name="preference_summary_web">Displays your home automation dashboard by swiping main screen.</string>
    <string name="preference_title_web_url">Dashboard Address</string>
    <string name="preference_summary_web_url">Enter the IP address of your home automation dashboard with prefix and port if needed (example: http://ipaddress:port).</string>
    <string name="preference_web_description">This is an experimental feature. The web page is rendered with Android\'s version of the Chrome Browser and may render differently depending on your Android SDK and WebView versions.</string>
    <string name="preference_title_notification">Notifications</string>
    <string name="preference_summary_notification">Show a system notification if the alarm is triggered or entry detected.</string>
    <string name="preference_title_inactivity">Start screen saver after…</string>
    <string name="preference_title_notifications">Notifications</string>
    <string name="preference_title_alert">Alert Notifications</string>
    <string name="preference_title_system_notifications">System Notifications</string>
    <string name="preference_summary_alert">Example format for the message topic and payload to display alert dialog: \n\n"{\"topic\":\"alarmpanel/command\", \"payload\":\"{\"alert\":\"Hello!\"}\"}"</string>
    <string name="preference_tts">TTS Notifications</string>
    <string name="preference_tts_topic_summary">Example format for the message topic and payload to be spoken: \n\n"{\"topic\":\"alarmpanel/command\", \"payload\":\"{\"speak\":\"Hello!\"}\"}"</string>
    <string name="preference_camera">Camera</string>
    <string name="preference_camera_title">Camera Capture</string>
    <string name="preference_camera_summary">Use the camera to capture an image and email it when the alarm is disabled.</string>
    <string name="preference_camera_flip_title">Rotate Camera</string>
    <string name="preference_camera_flip_summary">Depending on your camera, you may need to rotate or flip the camera. Currently %1$s.</string>
    <string name="preference_mail_domain">Domain</string>
    <string name="preference_mail_domain_summary">Enter your MailGun domain value (example: sandboxd83b1e242f934c73a471c518392df0.mailgun.org).</string>
    <string name="preference_mail_key">Api Key</string>
    <string name="preference_mail_key_summary">Enter your MailGun api key value (example: key-5d021926d65dc12we8ec04d7f9d0fd2c).</string>
    <string name="preference_mail_from">Mail From</string>
    <string name="preference_mail_from_summary">Enter an email address the email will be from (example: mister@thankmister.com).</string>
    <string name="preference_mail_to">Mail To</string>
    <string name="preference_mail_to_summary">Enter an email address to receive the image. You can use a comma to send to multiple addresses.((example: "mister@thankmister.com" or "mister@thankmister.com, me@thankmister.com")</string>
    <string name="preference_mail_title">Mail Gun Settings</string>
    <string name="preference_mail_description">To email captured images you need to setup a MailGun (mailgun.com) account and provide the domain name and api key, also enter the email address of the receipient.</string>
    <string name="pref_mqtt_settings_category">MQTT Notifications</string>
    <string name="preference_title_trigger_time">Trigger Time</string>
    <string name="preference_summary_trigger_time">The time in seconds before triggering the alarm. Currently %1$s seconds.</string>
    <string name="pref_telegram_title">Telegram</string>
    <string name="pref_telegram_chat_id_summary">Enter your Telegram bot chat id.</string>
    <string name="pref_telegram_token_summary">Enter your Telegram bot API token.</string>
    <string name="pref_telegram_chat_id_title">Telegram Chat Id</string>
    <string name="pref_telegram_api_title">Telegram API Token</string>
    <string name="pref_camera_send_image_notes">You can use Telegram, Mailgun, or both to send captured images.</string>
    <string name="pref_system_sounds_summary">Toggle the system alarm sound used for disarm alarm alert</string>
    <string name="pref_system_sounds_title">System Sounds</string>
    <string name="pref_night_mode_description">Dims the display and uses a dark theme based on the sun below or above the horizon.</string>
    <string name="pref_fullscreen_title">Fullscreen Mode</string>
    <string name="pref_fullscreen_description">Display application in fullscreen mode.</string>
    <string name="summary_notification_topic">Example format for the message topic and payload: \n\n"{\"topic\":\"alarmpanel/command\", \"payload\":\"{\"speak\":\"Hello!\"}\"}"</string>
    <string name="pref_title_prevent_sleep">Prevent Screen Sleep</string>
    <string name="pref_summary_prevent_sleep">When active, keeps the screen on.</string>
    <string name="pref_title_screen_brightness">Screen Brightness</string>
    <string name="pref_description_screen_brightness">Give permission to the application to control the device\'s screen brightness for night mode and screensaver.</string>
    <string name="summary_sun_topic">Please see the MQTT Sun documentation on the Project Page</string>
    <string name="preference_title_sun">Sun MQTT</string>
    <string name="pref_title_night_mode">Use Night Mode</string>
    <string name="pref_web_screensaver_title">Web Screensaver</string>
    <string name="pref_web_screensaver_summary">Use a web page as a screensaver. (limited support)</string>
    <string name="pref_web_screensaver_url_title">Web Screensaver Url</string>
    <string name="pref_web_screensaver_url_summary">Enter the url to use as a web screensaver.</string>
    <string name="pref_title_acceleration">Hardware Acceleration</string>
    <string name="pref_summary_acceleration">On some devices this will speed up web or camera rendering.</string>
    <string name="pref_brightness_button">Capture Brightness</string>
    <string name="pref_button_brightness_summary">Click to update and save the current device screen brightness.</string>
    <string name="preference_title_screensaver_dim">Dim screen…</string>
</resources>