<!--
  ~ Copyright (c) 2018 ThanksMister LLC
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software distributed
  ~ under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/preferenceView">

    <PreferenceCategory android:title="@string/preference_title_display">

        <SwitchPreference
            android:title="@string/pref_title_acceleration"
            android:summary="@string/pref_summary_acceleration"
            android:key="pref_settings_hardware_acceleration"/>

        <SwitchPreference
            android:title="@string/pref_fullscreen_title"
            android:summary="@string/pref_fullscreen_description"
            android:key="pref_settings_fullscreen"/>

        <SwitchPreference
            android:defaultValue="@string/default_setting_app_preventsleep"
            android:key="@string/key_setting_app_preventsleep"
            android:title="@string/pref_title_prevent_sleep"
            android:summary="@string/pref_summary_prevent_sleep"/>

        <SwitchPreference
            android:key="pref_settings_day_night"
            android:summary="@string/pref_night_mode_description"
            android:title="@string/pref_title_night_mode"/>

        <EditTextPreference
            android:selectable="false"
            android:dependency="pref_settings_day_night"
            android:summary="@string/summary_sun_topic"
            android:title="@string/preference_title_sun"
            android:textSize="12sp"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_title_screen_brightness">

        <SwitchPreference
            android:defaultValue="false"
            android:key="pref_settings_screen_brightness"
            android:title="@string/pref_title_screen_brightness"
            android:summary="@string/pref_description_screen_brightness"/>

        <Preference
            android:dependency="pref_settings_screen_brightness"
            android:key="pref_settings_brightness"
            android:title="@string/pref_brightness_button"
            android:icon="@drawable/ic_settings_brightness"
            android:summary="@string/pref_button_brightness_summary"/>

        <ListPreference
            android:dependency="pref_settings_screen_brightness"
            android:key="pref_settings_dim"
            android:title="@string/preference_title_screensaver_dim"
            android:entries="@array/dim_title"
            android:entryValues="@array/dim_values"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/preference_title_screen_saver_settings">

        <ListPreference
            android:key="pref_settings_inactivity_time"
            android:title="@string/preference_title_inactivity"
            android:entries="@array/inactivity_times"
            android:entryValues="@array/inactivity_values"/>

        <SwitchPreference
            android:defaultValue="false"
            android:title="@string/preference_title_screen_saver"
            android:summary="@string/preference_summary_screen_saver_settings"
            android:key="pref_settings_clock_saver"/>

        <SwitchPreference
            android:defaultValue="false"
            android:title="@string/pref_web_screensaver_title"
            android:summary="@string/pref_web_screensaver_summary"
            android:key="@string/key_setting_web_screensaver"/>

        <EditTextPreference
            android:key="@string/key_setting_web_url"
            android:dependency="@string/key_setting_web_screensaver"
            android:title="@string/pref_web_screensaver_url_title"
            android:summary="@string/pref_web_screensaver_url_summary"
            android:negativeButtonText="@android:string/cancel"
            android:positiveButtonText="@android:string/ok"/>

        <SwitchPreference
            android:defaultValue="false"
            android:title="@string/preference_title_screen_saver_photo"
            android:summary="@string/preference_summary_screen_saver_photo_settings"
            android:key="@string/key_saver_photo"/>

        <EditTextPreference
            android:key="pref_settings_image_url"
            android:dependency="@string/key_saver_photo"
            android:title="@string/preference_title_image_source"
            android:summary="@string/preference_summary_image_source"
            android:negativeButtonText="@android:string/cancel"
            android:positiveButtonText="@android:string/ok"/>

        <EditTextPreference
            android:key="pref_settings_client_id"
            android:dependency="@string/key_saver_photo"
            android:title="@string/pref_title_image_client_id"
            android:summary="@string/preference_summary_image_client_id"
            android:negativeButtonText="@android:string/cancel"
            android:positiveButtonText="@android:string/ok"/>

        <SwitchPreference
            android:key="pref_settings_image_fit"
            android:dependency="@string/key_saver_photo"
            android:title="@string/preference_title_image_fit"
            android:summary="@string/preference_summary_image_fit"/>

        <EditTextPreference
            android:key="pref_settings_image_rotation"
            android:dependency="@string/key_saver_photo"
            android:title="@string/preference_title_image_rotation"
            android:summary="@string/preference_summary_image_rotation"
            android:digits="0123456789"
            android:negativeButtonText="@android:string/cancel"
            android:positiveButtonText="@android:string/ok"/>

    </PreferenceCategory>

</PreferenceScreen>